--- a/package.json
+++ b/package.json
@@ -30,36 +30,36 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/polyfill": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.7.5",
-    "@types/office-js": "^1.0.37",
-    "@types/office-runtime": "^1.0.8",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.9.0",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.9.0",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.9.3",
+    "@types/office-js": "^1.0.86",
+    "@types/office-runtime": "^1.0.12",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
-    "current-processes": "^0.2.1",
-    "eslint-config-office-addins": "^1.0.10",
+    "eslint-config-office-addins": "^1.0.14",
+    "find-process": "^1.4.3",
     "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "mocha": "^6.2.0",
+    "html-webpack-plugin": "^4.0.1",
+    "mocha": "^7.1.1",
     "office-addin-cli": "^1.0.7",
     "office-addin-debugging": "^3.0.23",
-    "office-addin-dev-certs": "^1.4.14",
+    "office-addin-dev-certs": "^1.4.15",
     "office-addin-lint": "^1.0.19",
     "office-addin-prettier-config": "^1.0.12",
     "office-addin-test-helpers": "^1.0.17",
     "office-addin-test-server": "^1.0.21",
     "source-map-loader": "^0.2.4",
-    "ts-loader": "^6.1.0",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.6.3",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.8",
-    "webpack-dev-server": "^3.8.0"
+    "ts-loader": "^6.2.2",
+    "ts-node": "^8.8.1",
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "prettier": "office-addin-prettier-config"
 }
