--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "@babel/core": "^7.9.0",
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.9.0",
+    "@types/find-process": "1.2.0",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^13.9.3",
-    "@types/office-js": "^1.0.86",
-    "@types/office-runtime": "^1.0.12",
+    "@types/node": "^13.11.0",
+    "@types/office-js": "^1.0.91",
+    "@types/office-runtime": "^1.0.13",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
@@ -44,7 +45,7 @@
     "find-process": "^1.4.3",
     "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^4.0.1",
+    "html-webpack-plugin": "^4.0.4",
     "mocha": "^7.1.1",
     "office-addin-cli": "^1.0.7",
     "office-addin-debugging": "^3.0.23",
@@ -55,7 +56,7 @@
     "office-addin-test-server": "^1.0.21",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.2.2",
-    "ts-node": "^8.8.1",
+    "ts-node": "^8.8.2",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
